--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,3 +1,5 @@
+<h2>My Heroes</h2>
+
 <div>
   <label for="new-hero">Hero name: </label>
   <input id="new-hero" #heroName />
@@ -6,7 +8,14 @@
   <button class="add-button" (click)="add(heroName.value); heroName.value=''">
     Add hero
   </button>
-
-  <button class="delete" title="delete hero"
-          (click)="delete(hero)">x</button>
 </div>
+
+<ul class="heroes">
+  <li *ngFor="let hero of heroes">
+    <a routerLink="/detail/{{hero.id}}">
+      <span class="badge">{{hero.id}}</span> {{hero.name}}
+    </a>
+    <button class="delete" title="delete hero"
+            (click)="delete(hero)">x</button>
+  </li>
+</ul>
